--- a/styles.css
+++ b/styles.css
@@ -285,7 +285,8 @@ nav {
     transition: all 0.3s;
 }
 
-.like-count {
+.like-count,
+.comment-count {
     font-size: 0.75rem;
     color: #333;
 }
